# nws-data-parsing

./: Cargo.toml  README.md
nws-forecast-zones/: Cargo.toml  LICENSE-MIT.txt  README.md
nws-forecast-zones/src/: gen.rs  gen_fz.rs  gen_mz.rs  gen_oz.rs  lib.rs
nws-product-list/: Cargo.toml  README.md
nws-product-list/src/: gen.rs  lib.rs
wmo-abbrev-headings/: Cargo.toml  README.md
wmo-abbrev-headings/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: forecast_zones.rs  main.rs  product_list.rs
