[package]
name = "nws-forecast-zones"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["nws", "weather", "forecast", "zones"]
readme = "README.md"
description = "NWS public forecast zones"
repository = "https://github.com/eminence/nws-data-parsing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
