[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbase = "0.2.3"
shapefile = { version = "0.3.0", features = ["geo-types" ] }
geo = "0.20.1"
latlon = "0.1.3"
anyhow = { version = "1.0.57", features = ["backtrace"] }
#rustfmt-nightly = "1.4.21"